force-app/main/default/objects/Failed_Event__b/Failed_Event__b.object-meta.xml
<CustomObject>
    <description>Durable dead-letter store for service-request events that failed processing; replayed by a scheduled batch.</description>
    <label>Failed Event</label>
    <pluralLabel>Failed Events</pluralLabel>
</CustomObject>