force-app/main/default/objects/Failed_Event__b/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <description>Dedupe/correlation key</description>
    <label>Event Uuid</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>