force-app/main/default/objects/Failed_Event__b/fields/Failed_At__c.field-meta.xml
<CustomField>
    <fullName>Failed_At__c</fullName>
    <description>Time ordering for replay</description>
    <label>Failed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>