force-app/main/default/objects/Failed_Event__b/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Exception type/message</description>
    <label>Failure Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>