force-app/main/default/objects/Failed_Event__b/fields/Request_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_External_Id__c</fullName>
    <description>Links back to Service_Request__c</description>
    <label>Request External Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>