force-app/main/default/objects/Failed_Event__b/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <description>&quot;true&quot;/&quot;false&quot;</description>
    <inlineHelpText>true/false</inlineHelpText>
    <label>Resolved</label>
    <length>5</length>
    <type>Text</type>
</CustomField>